--- a/week1/Pseudocode/CS112.L11.KHTN.ipynb
+++ b/week1/Pseudocode/CS112.L11.KHTN.ipynb
@@ -29,7 +29,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,10 +49,66 @@
     "        <blockquote>$preSum_i = a_1 + a_2 + ... + a_n$ </blockquote>\n",
     "    <li> Để tính tổng từ vị trí i đến vị trí j:\n",
     "        <blockquote> $ sum_{i, j} = preSum_j - preSum_{i-1} $ </blockquote>\n",
-    "    <li> Ta có thể duyệt 2 vòng for để vét cạn hết vị trí $i, j$ có thể có để tìm tổng lớn nhất. Tuy nhiên cách này tốn chi phí thực hiện là $O(N^2)$\n",
     "    <li> Từ công thức trên, để tìm max $sum_{i, j}$ ta sẽ tối đa hoá $preSum_j$ và cực tiểu hoá $preSum_{i-1}$\n",
+    "    <li> Dễ thấy, ta có thể duyệt 2 vòng for để vét cạn hết vị trí $i, j$ có thể có để tìm tổng lớn nhất. Tuy nhiên cách này tốn chi phí thực hiện là $O(N^2)$\n",
+    "    <li> Vậy nên, dựa trên công thức trên, ta có thể tối ưu bằng phương pháp <b>Quy Hoạch Động</b> Với mỗi vị trí $j$ ta chỉ cần tìm vị trí $i-1$ với $i < j$ $\\rightarrow$ tìm ra được giá trị lớn nhất của $Max_{j}$ ứng vơi vị trí $j$\n",
+    "    <li> Sau cùng ta cần tìm giá trị lớn nhất của $Max_j$ với $j$ chạy từ 1 đến n\n",
     "</ul>\n",
-    "\n",
+    "<h4>SourceCode Quy Hoạch Động</h4>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1 4 5 -2 2\n",
+      "1 3 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nhập vào input\n",
+    "n = int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "# Khai báo các biến, trong đó:\n",
+    "# mi: min khi tính đến vị trí đang xét, \n",
+    "# pivot: tổng tiền tố tất cả các số tính đến vị trí đang xet,\n",
+    "# res: giá trị lớn nhất của các Max đã tính\n",
+    "# l, ans_l, ans_r: vị trí cần xuất\n",
+    "mi, pivot, res, l, ans_l, ans_r = 0, 0, 0, -1, -1, -1\n",
+    "for i in range(n):\n",
+    "    pivot += A[i]\n",
+    "    if (pivot < mi):\n",
+    "        mi = pivot\n",
+    "        l = i\n",
+    "    if (pivot - mi > res):\n",
+    "        res = pivot - mi\n",
+    "        ans_l = l\n",
+    "        ans_r = i\n",
+    "print(ans_l + 2, ans_r + 1, res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"colab_favicon_256px.png\" width=\"100\" height=\"180\" style=\"padding-left:0px\"></center>\n",
+    "<center><a style=\"text-align: center\" href=\"https://colab.research.google.com/drive/1QGLY8QEuRJ-i0OvvfLNVg7Uuqyb5W6Md\">OpenWithColab</a></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h4>Phương pháp thứ 2: <b>Hai con trỏ</b> </h4>\n",
     "\n",
     "\n",
@@ -69,9 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1 4 5 -2 2\n",
+      "1 3 10\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(input())\n",
     "a = list(map(int, input().split()))\n",
@@ -110,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
