--- a/week1/Pseudocode/CS112.L11.KHTN.ipynb
+++ b/week1/Pseudocode/CS112.L11.KHTN.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "source": [
     "<img src=\"colab_favicon_256px.png\" width=\"100\" height=\"180\" style=\"padding-left:0px\">\n",
-    "<center><a style=\"text-align: center\" href=\"https://colab.research.google.com/drive/1QGLY8QEuRJ-i0OvvfLNVg7Uuqyb5W6Md\">OpenWithColab</a></center>\n"
+    "<a style=\"text-align:center\" href=\"https://colab.research.google.com/drive/1QGLY8QEuRJ-i0OvvfLNVg7Uuqyb5W6Md\">OpenWithColab</a>\n"
    ]
   },
   {
