--- a/week2/Homework/Tao_bien.ipynb
+++ b/week2/Homework/Tao_bien.ipynb
@@ -39,12 +39,17 @@
         "| 3 2                  | 15                     |\n",
         "\n",
         "##1. Abstraction\n",
-        "Chọn n = 1  \n",
-        "Số tảo ngày thứ 0: 1 + **0** = **1**  \n",
-        "Số tảo ngày thứ 1: 1 + **1** = **2**   \n",
-        "Số tảo ngày thứ 2: 2 + **3** = **5**    \n",
-        "Số tảo ngày thứ 3: 5 + **8** = **13**  \n",
-        "Số tảo ngày thứ 4: 13 + **21** = **34**  \n",
+        "\n",
+        "Chọn n = 1\n",
+        "\n",
+        "| Ngày thứ   | Số tảo ngày trước   | Số tảo được sinh ra       | Tổng số tảo         |\n",
+        "|------------|---------------------|---------------------------|---------------------|\n",
+        "|     0      |          1          |           **0**           |       **1**         |\n",
+        "|     1      |          1          |           **1**           |       **2**         |\n",
+        "|     2      |          2          |           **3**           |       **5**         |\n",
+        "|     3      |          5          |           **8**           |       **13**        |\n",
+        "|     4      |          13         |           **21**          |       **34**        |\n",
+        "\n",
         "Nếu ta lấy các số in đậm viết thành dãy ta được: 0, 1, 1, 2, 3, 5, 8, 13, 21,... Đây là dãy Fibonacci  \n",
         "Suy ra số tảo ngày thứ k chính là số ở vị trí $(2*k+1)$ trong dãy Fibonacci\n",
         "\n",
@@ -53,17 +58,19 @@
         "##2. Pattern Recognition\n",
         "Đây là bài toán Tính số Fibonacci thứ n\n",
         "##3. Algorithm Design\n",
-        "###a. Dùng đệ quy  \n",
+        "\n",
+        "###a. Dùng đệ quy \n",
+        "Dãy Fibonacci được định nghĩa theo công thức: $F_n = F_{n-1} + F_{n-2}$\n",
+        "\n",
         "Pseudo-Code\n",
-        "Procedure: Fibonacci(n)  \n",
+        "<blockquote>\n",
+        "Procedure: Fibonacci(n)   \n",
         "If n == 0 then \n",
         "Return 0\n",
         "Elif n == 1 then\n",
         "Return 1\n",
         "Elif Return Fibonacci(n-1) + Fibonacci(n-2)\n",
-        "\n",
-        "Độ phức tạp: $O(n)$\n",
-        "Nên nếu k lớn (ví dụ: $10^{18}$) thì sẽ mất thời gian và bộ nhớ, để giải quyết vấn đề đó ta sử dụng "
+        "</blockquote>\n"
       ]
     },
     {
@@ -83,6 +90,115 @@
         "    else: \n",
         "        return Fibonacci(n-1)+Fibonacci(n-2)\n",
         "print(Fibonaci(2*i+1)*n)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8R-JH7Evv4H4",
+        "colab_type": "text"
+      },
+      "source": [
+        "Độ phức tạp: $O(n)$. Nếu k lớn (ví dụ: $10^{18}$) thì sẽ mất thời gian và tốn bộ nhớ.\n",
+        "\n",
+        "###b.\n",
+        "Biểu diễn dãy Fibonacci dưới dạng ma trận\n",
+        "$\n",
+        "\\begin{pmatrix}\n",
+        "F_{n+1} & F_{n}\\\\ \n",
+        "F_{n} & F_{n-1}\n",
+        "\\end{pmatrix}\n",
+        "=\n",
+        "\\begin{pmatrix}\n",
+        "1 & 1\\\\ \n",
+        "1 & 0\n",
+        "\\end{pmatrix}^{n}\n",
+        "$\n",
+        "\n",
+        "\n",
+        "https://en.wikipedia.org/wiki/Fibonacci_number\n",
+        "\n",
+        "Với n là số chẵn\n",
+        "$\n",
+        "\\begin{pmatrix}\n",
+        "F_{n+1} & F_{n}\\\\ \n",
+        "F_{n} & F_{n-1}\n",
+        "\\end{pmatrix}\n",
+        "=\n",
+        "\\begin{pmatrix}\n",
+        "1 & 1\\\\ \n",
+        "1 & 0\n",
+        "\\end{pmatrix}^{n}\n",
+        "= \n",
+        "\\begin{pmatrix}\n",
+        "1 & 1\\\\ \n",
+        "1 & 0\n",
+        "\\end{pmatrix}^{n/2}\n",
+        "\\begin{pmatrix}\n",
+        "1 & 1\\\\ \n",
+        "1 & 0\n",
+        "\\end{pmatrix}^{n/2}\n",
+        "$\n",
+        "\n",
+        "Với n là số lẻ \n",
+        "$\n",
+        "\\begin{pmatrix}\n",
+        "F_{n+1} & F_{n}\\\\ \n",
+        "F_{n} & F_{n-1}\n",
+        "\\end{pmatrix}\n",
+        "=\n",
+        "\\begin{pmatrix}\n",
+        "1 & 1\\\\ \n",
+        "1 & 0\n",
+        "\\end{pmatrix}^{n}\n",
+        "= \n",
+        "\\begin{pmatrix}\n",
+        "1 & 1\\\\ \n",
+        "1 & 0\n",
+        "\\end{pmatrix}^{n/2}\n",
+        "\\begin{pmatrix}\n",
+        "1 & 1\\\\ \n",
+        "1 & 0\n",
+        "\\end{pmatrix}^{n/2 + 1}\n",
+        "$\n",
+        "\n",
+        "\n",
+        "\n",
+        "Pseudo-Code\n",
+        "<blockquote>\n",
+        "Procedure: multiply_matrix(a,b) // Hàm nhân ma trận\n",
+        "Khỏi tạo ma trận kết quả phép nhân result có kích thước 2x2\n",
+        "for i do:\n",
+        "for j do:\n",
+        "for k do:\n",
+        "result[i][j] <-  result[i][j] + ( a[i][k] * b[k][j] )\n",
+        "result[i][j] <- result[i][j] % mod\n",
+        "\n",
+        "Procedure: Fibonacci_matrix(k) // Hàm tính số Fibonacci\n",
+        "khởi tạo base_matrix  = [[1,1],[1,0]]\n",
+        "If k = 1:\n",
+        "retrurn base_matrix\n",
+        "frac_matrix <- Fibonacci_matrix(k/2)\n",
+        "result <- multiply_matrix( frac_matrix,frac_matrix)\n",
+        "If k le:\n",
+        "result <- multiply_matrix( result,base_matrix)\n",
+        "</blockquote>\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CAiMJ1N23WkO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -139,9 +255,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "89MipDWY6cUe",
+        "colab_type": "text"
+      },
+      "source": [
+        "Độ phức tạp: $O(logn)$"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "t_BTLs6baVIA",
+        "id": "Tzyavg6O1uRo",
         "colab_type": "code",
         "colab": {}
       },
