--- a/week2/Homework/Tao_bien.ipynb
+++ b/week2/Homework/Tao_bien.ipynb
@@ -106,66 +106,7 @@
     "id": "8R-JH7Evv4H4"
    },
    "source": [
-    "Độ phức tạp: $O(n)$. Nếu k lớn (ví dụ: $10^{18}$) thì sẽ mất thời gian và tốn bộ nhớ.\n",
-    "\n",
-    "<h3>b. Dùng nhân ma trận</h3>\n",
-    "Biểu diễn dãy Fibonacci dưới dạng ma trận\n",
-    "$\n",
-    "\\begin{pmatrix}\n",
-    "$F_{n+1}$ & $F_{n}$\\\\ \n",
-    "$F_{n}$ & $F_{n-1}$\n",
-    "\\end{pmatrix}\n",
-    "=\n",
-    "\\begin{pmatrix}\n",
-    "1 & 1\\\\ \n",
-    "1 & 0\n",
-    "\\end{pmatrix}^{n}$\n",
-    "\n",
-    "\n",
-    "https://en.wikipedia.org/wiki/Fibonacci_number\n",
-    "\n",
-    "Với n là số chẵn\n",
-    "$\\begin{pmatrix}\n",
-    "F_{n+1} & F_{n}\\\\ \n",
-    "F_{n} & F_{n-1}\n",
-    "\\end{pmatrix}\n",
-    "=\n",
-    "\\begin{pmatrix}\n",
-    "1 & 1\\\\ \n",
-    "1 & 0\n",
-    "\\end{pmatrix}^{n}\n",
-    "= \n",
-    "\\begin{pmatrix}\n",
-    "1 & 1\\\\ \n",
-    "1 & 0\n",
-    "\\end{pmatrix}^{n/2}\n",
-    "\\begin{pmatrix}\n",
-    "1 & 1\\\\ \n",
-    "1 & 0\n",
-    "\\end{pmatrix}^{n/2}$\n",
-    "\n",
-    "Với n là số lẻ \n",
-    "$\\begin{pmatrix}\n",
-    "F_{n+1} & F_{n}\\\\ \n",
-    "F_{n} & F_{n-1}\n",
-    "\\end{pmatrix}\n",
-    "=\n",
-    "\\begin{pmatrix}\n",
-    "1 & 1\\\\ \n",
-    "1 & 0\n",
-    "\\end{pmatrix}^{n}\n",
-    "= \n",
-    "\\begin{pmatrix}\n",
-    "1 & 1\\\\ \n",
-    "1 & 0\n",
-    "\\end{pmatrix}^{n/2}\n",
-    "\\begin{pmatrix}\n",
-    "1 & 1\\\\ \n",
-    "1 & 0\n",
-    "\\end{pmatrix}^{n/2 + 1}$\n",
-    "\n",
-    "\n",
-    "\n",
+    "<img src=\"Screenshot 2020-09-22 171018.png\">\n",
     "Pseudo-Code\n",
     "<blockquote>\n",
     "Procedure: multiply_matrix(a,b) // Hàm nhân ma trận\n",
