--- a/CS112.ipynb
+++ b/CS112.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "CS112.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNSxbEEyghE7blYMqJ7Hnq2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +31,33 @@
       },
       "source": [
         "<h3> <b> Problems </b> </h3>\n",
+        "Anh và Tân thích ngắm sao cùng nhau. Hai bạn ngồi dưới đất tay trong tay và nhìn lên bầu trời. Nhưng lại có một cái cây cao che khuất tầm nhìn, chia bầu trời thành hai phần. Hai bạn xem cái cây là một đường đánh dấu: phần bên phải có tên là Tom và phần bên trái có tên là Jerry. Anh là một người rất thích đếm sao nên bạn ấy biết chính xác có $n$ sao bên phần của mình. Nhưng lần này bạn ấy muốn thử một điều gì đó khác nên đã tưởng tượng ra một hệ trục tọa độ có trục Ox là đường thẳng trùng với phần mặt đất ở bên trái của cây và Oy là đường thẳng đứng trùng với cây (xem hình)\n",
         "\n",
+        "Để thêm phần thú vị. Anh tưởng tượng ra 2 tia có gốc trùng với gốc tọa độ tạo thành 2 góc $\\alpha _1$ và $\\alpha _2$ với Ox\n",
+        "\n",
+        "Anh chọn bất kì một trong những ngôi sao nằm giữa 2 tia đó. Chú ý rằng Anh không thể chọn ngôi sao nằm trên một trong hai tia. Sau đó Anh lại tưởng tượng thêm 2 tia nữa mà 2 tia này có gốc ở ngôi sao mà Anh vừa chọn sao cho 2 tia này tạo với Ox thành 2 góc $\\alpha _1$ và $\\alpha _2$. Anh cứ lặp đi lặp lại cho đến khi không thể chọn được một ngôi sao nào nằm giữa 2 tia nữa.\n",
+        "\n",
+        "Kết quả là Anh có được một chuỗi các ngôi sao.\n",
+        "\n",
+        "Tìm số lượng $m$ sao lớn nhất mà Anh có được.\n",
+        "Lưu ý rằng chuỗi các sao phải bắt đầu từ gốc tọa độ\n",
+        "\n",
+        "<b>Input</b>\n",
+        "\n",
+        "<ul>\n",
+        "<li>Dòng đầu tiên chưa số nguyên $n$ $(1\\leqslant n\\leqslant 10^5)$ là số lượng ngôi sao.\n",
+        "<li>Dòng thứ hai chứa 2 phân số \"a/b\" và \"c/d\" với $\\frac{a}{b} = \\frac{sin\\alpha _1}{cos\\alpha _1}$ , \n",
+        "$\\frac{c}{d} = \\frac{sin\\alpha _2}{cos\\alpha _2}$,\n",
+        "$(0 \\leqslant a,b,c,d \\leqslant 10^5,\n",
+        " 0^{\\circ} \\leqslant \\alpha _1 < \\alpha _2 \\leqslant 90^{\\circ})$\n",
+        "và a,b,c,d là các số nguyên\n",
+        "<li>$n$ Dòng tiếp theo chưa các cặp $x_i,y_i$ $(1 \\leqslant x_i, y_i \\leqslant 10^5)$ là tọa độ các ngôi sao.\n",
+        "</ul>\n",
+        "\n",
+        "<b>Output</b>\n",
+        "In ra $m$ sao là số lượng sao lớn nhất mà Anh có được\n",
+        "\n",
+        "<b>Ví dụ</b>\n",
         "\n",
         "<h3> <b> Abstraction </b> </h3>\n",
         "\n",
