--- a/week3/Docs/Untitled.ipynb
+++ b/week3/Docs/Untitled.ipynb
@@ -33,9 +33,9 @@
     "</ul>\n",
     "Phương pháp giải chi tiết tại: <a src=\"Water_supply.ipynb\">Water-supply</a>\n",
     "\n",
-    "<h3>Giải bài tập từ buổi 2</h3>\n",
+    "<h2>Giải bài tập từ buổi 2</h2>\n",
     "\n",
-    "Thầy Duy cùng các anh/ bạn điểm sơ lại những cách có thể để giải quyết bài toán đếm sao. Phương pháp là quy bài toán ban đầu về bài toán Quy hoạch động điển hiền <b><i>\"Dãy con tăng dài nhất\"</i></b>"
+    "Thầy Duy cùng các anh/ bạn điểm sơ lại những cách có thể để giải quyết bài toán đếm sao. Phương pháp là quy bài toán ban đầu về bài toán Quy hoạch động điển hình <b><i>\"Dãy con tăng dài nhất\"</i></b>\n"
    ]
   },
   {
