--- a/week3/Docs/H_index.ipynb
+++ b/week3/Docs/H_index.ipynb
@@ -30,7 +30,7 @@
       },
       "source": [
         "<h1>NHÓM 11</h1>\n",
-        "<h2>H_Index</h2>\n",
+        "<h2>Problem H_Index</h2>\n",
         "\n",
         "Làm thế nào để đánh giá sự thành công của một nhà khoa học?  Dựa vào số bài báo được công bố hay dựa vào số lần một bài báo được trích dẫn tới ở công trình của những người khác? Cả hai tham số đó đều quan trọng.\n",
         "\n",
@@ -42,8 +42,8 @@
         "\n",
         "<b>Dữ liệu</b> Vào từ thiết bị nhập chuẩn:\n",
         "\n",
-        "Dòng đầu tiên chứa một số nguyên $n$ $(1 ≤ n ≤ 5 × 10^5)$,\n",
-        "Dòng thứ 2 chứa $n$ số nguyên $c_1, c_2, . . ., c_n$ $(0 ≤ ci ≤ 10^6, i = 1 ÷ n)$.\n",
+        "Dòng đầu tiên chứa một số nguyên $n$ \\\\(1 ≤ n ≤ 5 × 10^5\\\\),\n",
+        "Dòng thứ 2 chứa $n$ số nguyên $c_1, c_2, . . ., c_n$ \\\\(0 ≤ ci ≤ 10^6, i = 1 ÷ n\\\\).\n",
         "\n",
         "<b>Kết quả</b> Đưa ra thiết bị xuất chuẩn một số nguyên – H_Index tìm được.\n",
         "\n",
@@ -60,9 +60,9 @@
         "\n",
         "Nếu ta xem \"tệp lưu trữ\" là một mảng chứa các bài báo thì có thể rút ra được dạng đơn giản của bài toán.\n",
         "\n",
-        "Abstraction: Cho dãy a giảm dần, tìm $i_{max}$ sao cho $a_i \\geq  i$\n",
+        "<h2>3. Abstraction</h2> Trên dãy a giảm dần, tìm $i_{max}$ sao cho $a_i \\geq  i$\n",
         "\n",
-        "<h2>3. Algorithm Design</h2>\n",
+        "<h2>4. Algorithm Design</h2>\n",
         "\n",
         "Pseudo-Code\n",
         "```\n",
@@ -84,7 +84,7 @@
         "id": "40xMeUtP7Q4t"
       },
       "source": [
-        "<h3>3. Implement</h3>"
+        "<h3>5. Implement</h3>"
       ]
     },
     {
